# ray-tracer

./: CMakeLists.txt  README.md
assets/shaders/: fs.frag  vs.vert
src/: main.cpp
src/app/: window.cpp  window.h
src/core/math/: mat3.h  mat4.h  vec3.h  vec4.h
src/render/: comp_shader.cpp  comp_shader.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/scene/: camera.h  object.h
src/shaders/: shader.h  test.frag  test.vert
src/util/: glsl_util.cpp  glsl_util.h
